# kekbit

./: .gitignore  .rustfmt.toml  .travis.yaml  1  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci-linux.yml  clippy.yml  rust.yml
examples/: README.md  chat.rs  child_ps.rs  echo_in.rs  echo_out.rs  rep.rs  req.rs
kekbit-codecs/: Cargo.toml  README.md
kekbit-codecs/src/: codecs.rs  encoder.rs  main.rs
kekbit-codecs/src/codecs/: raw.rs  text.rs
kekbit-core/: Cargo.toml  README.md
kekbit-core/examples/: README.md  chat.rs  child_ps.rs  echo_in.rs  echo_out.rs  rep.rs  req.rs
kekbit-core/src/: api.rs  header.rs  lib.rs  shm.rs  tick.rs  utils.rs  version.rs
kekbit-core/src/shm/: reader.rs  writer.rs
kekbit_core/: Cargo.toml
kekbit_core/src/: api.rs  header.rs  lib.rs  reader.rs  shm.rs  version.rs  writer.rs
kekbit_core/src/shm/: reader.rs  writer.rs
src/: api.rs  core.rs  decorators.rs  lib.rs  retry.rs
src/core/: handlers.rs  header.rs  metadata.rs  reader.rs  tick.rs  version.rs  writer.rs
