[package]
name = "kekbit"
version = "0.2.4"
authors = ["motoras <motoras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Ultralight persistent data channels"
homepage = "https://github.com/motoras/kekbit"
repository="https://github.com/motoras/kekbit/tree/master/src"
keywords = [ "data-channel", "state-replication", "transactions-journal",  "ipc","system-prevalence"]


[workspace]
members = [
  ".",
  "kekbit-core", "kekbit-codecs"
]

[dependencies.kekbit-core]
version = "0.2.4"
path = "./kekbit-core"

[dependencies.kekbit-codecs]
version = "0.1.2"
path = "./kekbit-codecs"


[badges]
travis-ci = { repository = "motoras/kekbit", branch = "master" }


[profile.dev]
opt-level = 0 
debug = true 
rpath = false
lto = false 
debug-assertions = true
codegen-units = 16
panic = 'unwind' 
incremental = true 
overflow-checks = true
 
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = true
overflow-checks = false



