[package]
name = "kekbit"
version = "0.3.3"
authors = ["motoras <motoras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Ultralight persistent data channels"
homepage = "https://github.com/motoras/kekbit"
repository="https://github.com/motoras/kekbit"
keywords = ["data-channel", "state-replication", "transactions-journal",  "ipc","system-prevalence"]
readme = "README.md"


[lib]
name = "kekbit"
path = "src/lib.rs"

[badges]
codecov = { repository = "motoras/kekbit", branch = "master", service = "github" }
build = { repository = "motoras/kekbit", branch = "master", service = "github" }
maintenance = {status = "actively-developed"}


[dependencies]
memmap = "0.7.0"
log = "0.4.8"
crossbeam-utils  ="0.7.2"
parking_lot  ="0.10.0"


[dev-dependencies]
tempdir = "0.3.7"
simple_logger ="1.6.0"
nix="0.17.0"
crossbeam ="0.7.3"
assert_matches="1.3.0"

[profile.dev]
opt-level = 0 
debug = true 
rpath = false
lto = false 
debug-assertions = true
codegen-units = 16
panic = 'unwind' 
incremental = true 
overflow-checks = true
 
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = 'fat'
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = true
overflow-checks = false



