[package]
name = "kekbit-codecs"
version = "0.1.222"
authors = ["motoras <motoras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Kekbit channels adapters, that allow to directly write and read data structures into a channel"
homepage = "https://github.com/motoras/kekbit"
repository="https://github.com/motoras/kekbit/tree/master/kekbit-codecs"
keywords = ["data-formats"]

[dependencies]
log = "0.4.8"
#serde="1.0.*"
#serde_json ="1.0.*"
#serde_derive ="1.0.*"






[dev-dependencies]
simple_logger ="1.5.0"
assert_matches="1.3.0"
