[package]
name = "kekbit-core"
version = "0.1.0"
authors = ["motoras <motoras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Defines the main abstractions and provides the core components required to work with kekbit channels"
homepage = "https://github.com/motoras/kekbit"
documentation="https://docs.rs/kekbit-core/0.1.0/kekbit_core/"
repository="https://github.com/motoras/kekbit/tree/master/kekbit-core"
keywords = ["lock-free", "data-channel", "persitent-queue", "request-reply"]
categories = ["middleware", "ipc"]

[dependencies]
memmap = "0.7.0"
log = "0.4.8"


[dev-dependencies]
tempdir = "0.3.7"
simple_logger ="1.5.0"
nix="0.17.0"
crossbeam ="0.7.3"
